...
    <string name="condition">Problem</string>
    <string name="description">Description</string>
    <string name="patients">Patients</string>
    <string name="patient_s_problems">Patient\'s Problems</string>
    <string name="patient_name_colon">Patient Name:</string>
    <string name="search_problems_or_records">Search Problems or Records</string>
    <string name="contact_information">Contact Information</string>
    <string name="home">Home</string>
    <string name="username_colon">Username:</string>
    <string name="email_colon">Email:</string>
    <string name="your_profile">Your Profile</string>
    <string name="phone_colon">Phone:</string>
    <string name="profile">Profile</string>
...
